Revert "LEXI-102: Refactoring of the project: removed boiler plate code and r…" (#58)
This reverts commit 80e40b92345612659f4fc13f3c07e921fc85122b.