@@ -5,12 +5,9 @@ import com.abhi.leximentor.fitmate.constants.Status;
 import com.abhi.leximentor.fitmate.constants.Unit;
 import com.abhi.leximentor.fitmate.dto.ExerciseAnalyticsDTO;
 import com.abhi.leximentor.fitmate.dto.ExerciseDTO;
-import com.abhi.leximentor.fitmate.dto.PagedResponse;
 import com.abhi.leximentor.fitmate.dto.filters.ExerciseSearchFilter;
 import com.abhi.leximentor.fitmate.entities.*;
 import com.abhi.leximentor.fitmate.exceptions.entities.ServerException;
-import com.abhi.leximentor.fitmate.mapper.DrillMapper;
-import com.abhi.leximentor.fitmate.mapper.ExerciseMapper;
 import com.abhi.leximentor.fitmate.repository.*;
 import com.abhi.leximentor.fitmate.service.ExerciseService;
 import com.abhi.leximentor.fitmate.service.ResourceService;
@@ -21,7 +18,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.data.mongodb.gridfs.GridFsResource;
 import org.springframework.stereotype.Service;
@@ -46,43 +42,42 @@ public class ExerciseServiceImpl implements ExerciseService {
     private final ResourceService resourceService;
     private final FitmateResourceRepository fitmateResourceRepository;
     private final DrillRepository drillRepository;
-    private final ExerciseMapper exerciseMapper;
-    private final DrillMapper drillMapper;
 
     @Override
     @Transactional
     public List<ExerciseDTO> addAll(List<ExerciseDTO> exerciseDTOS) throws ServerException.EntityObjectNotFound {
         List<Exercise> exercises = new LinkedList<>();
         for (ExerciseDTO exerciseDTO : exerciseDTOS) {
-            Training training = StringUtils.isNotEmpty(exerciseDTO.getTraining().getName())
-                    ? trainingRepository.findByNameIgnoreCase(exerciseDTO.getTraining().getName())
-                    : trainingRepository.findByRefId(Long.parseLong(exerciseDTO.getTraining().getRefId()));
+            Training training = StringUtils.isNotEmpty(exerciseDTO.getTraining().getName()) ? trainingRepository.findByNameIgnoreCase(exerciseDTO.getTraining().getName()) : trainingRepository.findByRefId(Long.parseLong(exerciseDTO.getTraining().getRefId()));
             if (training == null) {
                 log.error("The training object is not found.");
                 throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND + " {Training Object.} ");
             }
-            BodyPart bodyPart = StringUtils.isNotEmpty(exerciseDTO.getBodyPart().getName())
-                    ? bodyPartsRepository.findByName(exerciseDTO.getBodyPart().getName())
-                    : bodyPartsRepository.findByRefId(Long.parseLong(exerciseDTO.getBodyPart().getRefId()));
+            BodyPart bodyPart = StringUtils.isNotEmpty(exerciseDTO.getBodyPart().getName()) ?
+                    bodyPartsRepository.findByName(exerciseDTO.getBodyPart().getName()) :
+                    bodyPartsRepository.findByRefId(Long.parseLong(exerciseDTO.getBodyPart().getRefId()));
             if (bodyPart == null) {
                 log.error("The body part object is not found.");
                 throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND + "{Body part object}");
             }
             List<Muscle> muscles = null;
             if (CollectionUtils.isNotEmpty(exerciseDTO.getTargetMuscles())) {
-                muscles = muscleRepository.findByNameInIgnoreCase(exerciseDTO.getTargetMuscles().stream()
-                        .filter(m -> StringUtils.isNotEmpty(m.getName()))
-                        .map(m -> m.getName().toLowerCase(Locale.ROOT))
+                muscles = muscleRepository.findByNameInIgnoreCase(exerciseDTO
+                        .getTargetMuscles()
+                        .stream()
+                        .filter(muscle -> StringUtils.isNotEmpty(muscle.getName()))
+                        .map(muscle -> muscle.getName().toLowerCase(Locale.ROOT))
                         .toList());
             }
-            exercises.add(exerciseMapper.toEntity(exerciseDTO, training, bodyPart, muscles));
+            exercises.add(FitmateServiceUtil.ExerciseUtil.buildEntity(exerciseDTO, training, bodyPart, muscles));
         }
 
         List<Exercise> response = exerciseRepository.saveAll(exercises);
+//        return response.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
         List<ExerciseDTO> output = new LinkedList<>();
         response.forEach(exercise -> {
             try {
-                output.add(exerciseMapper.toDto(exercise));
+                output.add(FitmateServiceUtil.ExerciseUtil.buildDto(exercise));
             } catch (Exception ex) {
                 ex.printStackTrace();
             }
@@ -94,7 +89,7 @@ public class ExerciseServiceImpl implements ExerciseService {
     public ExerciseDTO getByRefId(long refId) throws ServerException.EntityObjectNotFound {
         Exercise exercise = exerciseRepository.findByRefId(refId);
         if (exercise == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
-        return exerciseMapper.toDto(exercise);
+        return FitmateServiceUtil.ExerciseUtil.buildDto(exercise);
     }
 
     @Override
@@ -104,14 +99,14 @@ public class ExerciseServiceImpl implements ExerciseService {
         List<Exercise> exercises = exerciseRepository.findByRefIdIn(refIds);
         if (exercises.size() != refIds.size())
             throw new ServerException().new EntityObjectNotFound(LogConstants.GENERIC_EXCEPTION);
-        return exercises.stream().map(exerciseMapper::toDto).toList();
+        return exercises.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
     public ExerciseDTO getByName(String name) {
         Exercise exercise = exerciseRepository.findByName(name.toUpperCase());
         if (exercise == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
-        return exerciseMapper.toDto(exercise);
+        return FitmateServiceUtil.ExerciseUtil.buildDto(exercise);
     }
 
     @Override
@@ -121,21 +116,22 @@ public class ExerciseServiceImpl implements ExerciseService {
         if (exercise == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
         exercise.setName(exerciseDTO.getName());
         exercise.setDescription(exerciseDTO.getDescription());
-        exercise.setUnit(Unit.from(exerciseDTO.getUnit()).getValue());
+        exercise.setUnit(Unit.from(exercise.getUnit()).getValue());
         exercise.setStatus(Status.ApplicationStatus.getStatus(exerciseDTO.getStatus()));
         BodyPart targetBodyPart = bodyPartsRepository.findByNameIgnoreCase(exerciseDTO.getBodyPart().getName());
         if (targetBodyPart == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
         exercise.setTargetBodyPart(targetBodyPart);
         exercise.setEquipments(null);
         exercise.setEquipments(exerciseDTO.getEquipments());
-        return exerciseMapper.toDto(exerciseRepository.save(exercise));
+        return FitmateServiceUtil.ExerciseUtil.buildDto(exerciseRepository.save(exercise));
     }
 
     @Override
     public List<ExerciseDTO> getByBodyPartRefId(long bodyPartRefId) throws ServerException.EntityObjectNotFound {
         BodyPart bodyPart = bodyPartsRepository.findByRefId(bodyPartRefId);
         if (bodyPart == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
-        return exerciseRepository.findByTargetBodyPart(bodyPart).stream().map(exerciseMapper::toDto).toList();
+        List<Exercise> exercises = exerciseRepository.findByTargetBodyPart(bodyPart);
+        return exercises.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
@@ -154,10 +150,17 @@ public class ExerciseServiceImpl implements ExerciseService {
         List<Exercise> exercises = exerciseRepository.findByRefIdIn(exerciseRefIds);
         log.info("Fetched all the exercise data from the database: {}", exercises);
         exercises.forEach(exercise -> {
-            if (exercise.getEquipments() != null) exercise.getEquipments().clear();
-            if (exercise.getResources() != null) exercise.getResources().clear();
-            if (exercise.getTargetMuscles() != null) exercise.getTargetMuscles().clear();
+            if (exercise.getEquipments() != null) {
+                exercise.getEquipments().clear();
+            }
+            if (exercise.getResources() != null) {
+                exercise.getResources().clear();
+            }
+            if (exercise.getTargetMuscles() != null) {
+                exercise.getTargetMuscles().clear();
+            }
         });
+//        exerciseRepository.saveAllAndFlush(exercises);
         exerciseRepository.deleteAll(exercises);
     }
 
@@ -165,7 +168,8 @@ public class ExerciseServiceImpl implements ExerciseService {
     public List<ExerciseDTO> getAllByTrainingMetadataRefId(long trainingMetadataRefId) {
         Training training = trainingRepository.findByRefId(trainingMetadataRefId);
         if (training == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
-        return exerciseRepository.findByTraining(training).stream().map(exerciseMapper::toDto).toList();
+        List<Exercise> exercises = exerciseRepository.findByTraining(training);
+        return exercises.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
@@ -174,17 +178,13 @@ public class ExerciseServiceImpl implements ExerciseService {
         if (training == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
         BodyPart bodyPart = bodyPartsRepository.findByRefId(targetBodyPartRefId);
         if (bodyPart == null) throw new ServerException().new EntityObjectNotFound(LogConstants.ENTITY_NOT_FOUND);
-        return exerciseRepository.findByTrainingAndTargetBodyPart(training, bodyPart).stream().map(exerciseMapper::toDto).toList();
+        List<Exercise> exercises = exerciseRepository.findByTrainingAndTargetBodyPart(training, bodyPart);
+        return exercises.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
     public List<ExerciseDTO> getAll() {
-        return exerciseRepository.findAll().stream().map(exerciseMapper::toDto).toList();
-    }
-
-    @Override
-    public PagedResponse<ExerciseDTO> getAll(Pageable pageable) {
-        return PagedResponse.of(exerciseRepository.findAll(pageable), exerciseMapper::toDto);
+        return exerciseRepository.findAll().stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
@@ -198,8 +198,7 @@ public class ExerciseServiceImpl implements ExerciseService {
         List<FitmateResource> resources = new ArrayList<>();
         files.forEach(file -> {
             String fileName = KeyGeneratorUtil.uuid();
-            String extension = Objects.requireNonNull(file.getOriginalFilename())
-                    .substring(file.getOriginalFilename().lastIndexOf("."));
+            String extension = Objects.requireNonNull(file.getOriginalFilename()).substring(file.getOriginalFilename().lastIndexOf("."));
             fileName = fileName + extension;
             String resourceId;
             try {
@@ -207,17 +206,21 @@ public class ExerciseServiceImpl implements ExerciseService {
             } catch (IOException e) {
                 throw new ServerException().new InternalError(e.getMessage());
             }
-            resources.add(FitmateResource.builder()
+            FitmateResource fitmateResource = FitmateResource.builder()
                     .fileName(fileName)
                     .contentType(file.getContentType())
                     .resourceId(resourceId)
                     .refId(KeyGeneratorUtil.refId())
                     .uuid(fileName)
                     .extension(extension)
-                    .build());
+                    .build();
+//            fitmateResource = fitmateResourceRepository.save(fitmateResource);
+            resources.add(fitmateResource);
         });
         Exercise exercise = exerciseRepository.findByRefId(Long.parseLong(exerciseDTO.getRefId()));
-        if (exercise == null) throw new ServerException().new EntityObjectNotFound("Exercise object is not found.");
+        if (exercise == null) {
+            throw new ServerException().new EntityObjectNotFound("Exercise object is not found.");
+        }
         List<FitmateResource> existingResources = exercise.getResources();
         if (CollectionUtils.isEmpty(existingResources)) {
             exercise.setResources(resources);
@@ -232,26 +235,30 @@ public class ExerciseServiceImpl implements ExerciseService {
     public List<Map<String, Object>> findAllResources(long refId) {
         List<Map<String, Object>> files = new ArrayList<>();
         Exercise exercise = exerciseRepository.findByRefId(refId);
-        exercise.getResources().stream()
+        List<GridFSFile> gridFSFiles = exercise.getResources()
+                .stream()
                 .map(FitmateResource::getResourceId)
+                .toList()
+                .stream()
                 .map(resourceService::findGridFile)
-                .forEach((GridFSFile file) -> {
-                    Map<String, Object> fileInfo = new HashMap<>();
-                    fileInfo.put("id", file.getObjectId().toString());
-                    fileInfo.put("filename", file.getFilename());
-                    fileInfo.put("contentType", file.getMetadata() != null ? file.getMetadata().getString("_contentType") : null);
-                    fileInfo.put("length", file.getLength());
-                    fileInfo.put("uploadDate", file.getUploadDate());
-                    fileInfo.put("downloadUrl", "/files/" + file.getObjectId().toString());
-                    files.add(fileInfo);
-                });
+                .toList();
+        gridFSFiles.forEach(file -> {
+            Map<String, Object> fileInfo = new HashMap<>();
+            fileInfo.put("id", file.getObjectId().toString());
+            fileInfo.put("filename", file.getFilename());
+            fileInfo.put("contentType", file.getMetadata() != null ? file.getMetadata().getString("_contentType") : null);
+            fileInfo.put("length", file.getLength());
+            fileInfo.put("uploadDate", file.getUploadDate());
+            fileInfo.put("downloadUrl", "/files/" + file.getObjectId().toString());
+            files.add(fileInfo);
+        });
         return files;
     }
 
     @Override
     public Optional<GridFsResource> findResource(long refId, String resourceId) {
         Exercise exercise = exerciseRepository.findByRefId(refId);
-        FitmateResource fitmateResource;
+        FitmateResource fitmateResource = null;
         if (StringUtils.isEmpty(resourceId)) {
             if (CollectionUtils.isNotEmpty(exercise.getResources())) {
                 fitmateResource = exercise.getResources().get(0);
@@ -259,10 +266,7 @@ public class ExerciseServiceImpl implements ExerciseService {
                 throw new ServerException().new InternalError("Resource not found.");
             }
         } else {
-            fitmateResource = exercise.getResources().stream()
-                    .filter(r -> StringUtils.equals(resourceId, r.getResourceId()))
-                    .findAny()
-                    .orElseThrow(() -> new ServerException().new InternalError("Resource not found."));
+            fitmateResource = exercise.getResources().stream().filter(resource -> StringUtils.equals(resourceId, resource.getResourceId())).findAny().orElseThrow(() -> new ServerException().new InternalError("Resource not found."));
         }
         return resourceService.find(fitmateResource.getResourceId());
     }
@@ -270,20 +274,24 @@ public class ExerciseServiceImpl implements ExerciseService {
     @Override
     @Transactional
     public void updateResource(ExerciseDTO exerciseDTO, List<MultipartFile> files, String placeholder) {
-        if (StringUtils.isEmpty(placeholder))
+        if (StringUtils.isEmpty(placeholder)) {
             throw new ServerException().new InternalError("placeholder is required.");
+        }
         Exercise exercise = exerciseRepository.findByRefId(Long.parseLong(exerciseDTO.getRefId()));
-        if (exercise == null) throw new ServerException().new EntityObjectNotFound("Exercise object is not found.");
-        List<FitmateResource> fitmateResources = CollectionUtils.isEmpty(exercise.getResources())
-                ? new ArrayList<>() : exercise.getResources();
-        FitmateResource fitmateResource = fitmateResources.stream()
+        if (exercise == null) {
+            throw new ServerException().new EntityObjectNotFound("Exercise object is not found.");
+        }
+        List<FitmateResource> fitmateResources = exercise.getResources();
+        fitmateResources = CollectionUtils.isEmpty(fitmateResources) ? new ArrayList<>() : fitmateResources;
+        FitmateResource fitmateResource = fitmateResources
+                .stream()
                 .filter(fr -> StringUtils.equalsIgnoreCase(placeholder, fr.getPlaceholder()))
-                .findAny().orElse(null);
+                .findAny()
+                .orElse(null);
         if (fitmateResource == null) {
             for (MultipartFile file : files) {
                 String fileName = KeyGeneratorUtil.uuid();
-                String extension = Objects.requireNonNull(file.getOriginalFilename())
-                        .substring(file.getOriginalFilename().lastIndexOf("."));
+                String extension = Objects.requireNonNull(file.getOriginalFilename()).substring(file.getOriginalFilename().lastIndexOf("."));
                 fileName = fileName + extension;
                 String resourceId;
                 try {
@@ -291,10 +299,16 @@ public class ExerciseServiceImpl implements ExerciseService {
                 } catch (IOException e) {
                     throw new ServerException().new InternalError(e.getMessage());
                 }
-                fitmateResources.add(FitmateResource.builder()
-                        .fileName(fileName).contentType(file.getContentType())
-                        .resourceId(resourceId).refId(KeyGeneratorUtil.refId())
-                        .placeholder(placeholder).uuid(fileName).extension(extension).build());
+                FitmateResource fitmateResource1 = FitmateResource.builder()
+                        .fileName(fileName)
+                        .contentType(file.getContentType())
+                        .resourceId(resourceId)
+                        .refId(KeyGeneratorUtil.refId())
+                        .placeholder(placeholder)
+                        .uuid(fileName)
+                        .extension(extension)
+                        .build();
+                fitmateResources.add(fitmateResource1);
                 exercise.setResources(fitmateResources);
                 exerciseRepository.save(exercise);
             }
@@ -302,8 +316,7 @@ public class ExerciseServiceImpl implements ExerciseService {
             for (MultipartFile file : files) {
                 resourceService.remove(fitmateResource.getResourceId());
                 String fileName = KeyGeneratorUtil.uuid();
-                String extension = Objects.requireNonNull(file.getOriginalFilename())
-                        .substring(file.getOriginalFilename().lastIndexOf("."));
+                String extension = Objects.requireNonNull(file.getOriginalFilename()).substring(file.getOriginalFilename().lastIndexOf("."));
                 fileName = fileName + extension;
                 String resourceId;
                 try {
@@ -326,13 +339,21 @@ public class ExerciseServiceImpl implements ExerciseService {
         Exercise exercise = exerciseRepository.findByRefId(refId);
         FitmateResource fitmateResource;
         if (StringUtils.isNotEmpty(resourceId)) {
-            fitmateResource = exercise.getResources().stream()
-                    .filter(r -> StringUtils.equals(resourceId, r.getResourceId())).findAny().orElse(null);
+            fitmateResource = exercise.getResources()
+                    .stream()
+                    .filter(resource -> StringUtils.equals(resourceId, resource.getResourceId()))
+                    .findAny()
+                    .orElse(null);
         } else {
-            fitmateResource = exercise.getResources().stream()
-                    .filter(r -> StringUtils.equalsIgnoreCase(placeholder, r.getPlaceholder())).findAny().orElse(null);
+            fitmateResource = exercise.getResources()
+                    .stream()
+                    .filter(resource -> StringUtils.equalsIgnoreCase(placeholder, resource.getPlaceholder()))
+                    .findAny()
+                    .orElse(null);
         }
-        if (fitmateResource == null) return Optional.empty();
+        if (fitmateResource == null) {
+            return Optional.empty();
+        }
         return resourceService.find(fitmateResource.getResourceId());
     }
 
@@ -340,21 +361,8 @@ public class ExerciseServiceImpl implements ExerciseService {
     @Transactional(readOnly = true)
     public List<ExerciseDTO> search(ExerciseSearchFilter filter) {
         if (filter == null || filter.isEmpty()) {
-            return exerciseRepository.findAll().stream().map(exerciseMapper::toDto).toList();
+            return exerciseRepository.findAll().stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
         }
-        return exerciseRepository.findAll(buildExerciseSpec(filter)).stream().map(exerciseMapper::toDto).toList();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public PagedResponse<ExerciseDTO> search(ExerciseSearchFilter filter, Pageable pageable) {
-        Specification<Exercise> spec = (filter == null || filter.isEmpty())
-                ? Specification.where(null)
-                : buildExerciseSpec(filter);
-        return PagedResponse.of(exerciseRepository.findAll(spec, pageable), exerciseMapper::toDto);
-    }
-
-    private Specification<Exercise> buildExerciseSpec(ExerciseSearchFilter filter) {
         Specification<Exercise> spec = Specification.where(null);
         spec = StringUtils.isNotEmpty(filter.getUuid()) ? spec.and((root, query, cb) -> cb.equal(root.get("uuid"), filter.getUuid())) : spec;
         spec = StringUtils.isNotEmpty(filter.getRefId()) ? spec.and((root, query, cb) -> cb.equal(root.get("refId"), Long.parseLong(filter.getRefId()))) : spec;
@@ -362,21 +370,19 @@ public class ExerciseServiceImpl implements ExerciseService {
         spec = StringUtils.isNotEmpty(filter.getUnit()) ? spec.and((root, query, cb) -> cb.equal(cb.lower(root.get("unit")), filter.getUnit().toLowerCase())) : spec;
         spec = StringUtils.isNotEmpty(filter.getTrainingRefId()) ? spec.and((root, query, cb) -> cb.equal(root.join("training").get("refId"), Long.parseLong(filter.getTrainingRefId()))) : spec;
         spec = StringUtils.isNotEmpty(filter.getTargetBodyPartRefId()) ? spec.and((root, query, cb) -> cb.equal(root.join("targetBodyPart").get("refId"), Long.parseLong(filter.getTargetBodyPartRefId()))) : spec;
-        return spec;
+        return exerciseRepository.findAll(spec).stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
     }
 
     @Override
     public List<ExerciseDTO> getAllWithAnalytics() {
         List<Exercise> exercises = exerciseRepository.findAll();
-        List<ExerciseDTO> dtoList = exercises.stream().map(exerciseMapper::toDto).toList();
+        List<ExerciseDTO> dtoList = exercises.stream().map(FitmateServiceUtil.ExerciseUtil::buildDto).toList();
         dtoList.forEach(dto -> {
             ExerciseAnalyticsDTO exerciseAnalyticsDTO = ExerciseAnalyticsDTO.builder().build();
             Exercise exercise = exerciseRepository.findByRefId(Long.parseLong(dto.getRefId()));
             List<Drill> drills = drillRepository.findByExerciseOrderByCrtnDateDesc(exercise);
-            drills = drills.stream()
-                    .filter(drill -> drill.getCrtnDate().isBefore(LocalDateTime.now().minusDays(5)))
-                    .toList();
-            exerciseAnalyticsDTO.setLastFiveDrills(drills.stream().map(drillMapper::toDto).collect(Collectors.toList()));
+            drills = drills.stream().filter(drill -> drill.getCrtnDate().isBefore(LocalDateTime.now().minusDays(5))).toList();
+            exerciseAnalyticsDTO.setLastFiveDrills(drills.stream().map(FitmateServiceUtil.DrillUtil::buildDTO).collect(Collectors.toList()));
             exerciseAnalyticsDTO.setTotalNumberOfTimesCompleted(drills.size());
             dto.setAnalyticsDTOList(exerciseAnalyticsDTO);
         });
